@@ -946,7 +946,7 @@ gtk_list_focus (GtkContainer     *container,
   else if (container->focus_child == NULL ||
       !GTK_WIDGET_HAS_FOCUS (container->focus_child))
     {
-      if (*GTK_CONTAINER_CLASS (parent_class)->focus)
+      if (GTK_CONTAINER_CLASS (parent_class)->focus)
 	return_val = GTK_CONTAINER_CLASS (parent_class)->focus
 	  (container, direction);
     }
